--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.2",
     "force": "^0.0.3",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "shortid": "^2.2.16",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.5.1",
     "typescript": "^4.4.2",
