--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "force": "^0.0.3",
     "jotai": "^2.3.1",
     "lodash": "^4.17.21",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
