Feat/닉네임 욕설 필터링, 유효성 검사 실시간

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.2",
+    "bad-words": "^3.0.4",
+    "badwords-ko": "^1.0.3",
     "force": "^0.0.3",
     "jotai": "^2.3.1",
     "lodash": "^4.17.21",
