--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
