--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "shortid": "^2.2.16",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.5.1",
