--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bad-words": "^3.0.4",
     "badwords-ko": "^1.0.3",
     "force": "^0.0.3",
+    "framer-motion": "^10.16.4",
     "jotai": "^2.3.1",
     "jotai-location": "^0.5.1",
     "lodash": "^4.17.21",
