--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/web": "9.5.5",
     "@supabase/supabase-js": "^2.32.0",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.33.0",
@@ -13,6 +14,7 @@
     "@types/lodash": "^4.14.197",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/shortid": "^0.0.29",
@@ -27,9 +29,10 @@
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
@@ -41,6 +44,7 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-tinder-card": "^1.6.2",
     "react-toastify": "^9.1.3",
     "shortid": "^2.2.16",
     "styled-components": "^6.0.7",
